--- a/application.yaml
+++ b/application.yaml
@@ -37,7 +37,7 @@ spec:
     targetPort: 1880
   type: LoadBalancer
 ---
-apiVersion: autoscaling/v2beta2
+apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: node-red
